# polymarket-research-core

./: README.md  pyproject.toml
src/polymarket_research_core/: __init__.py  edge.py  evoi.py  models.py  notes.py  prompts.py  scoring.py  units.py  util.py
src/polymarket_research_core/polymarket/: __init__.py  clob.py  gamma.py
tests/: test_core.py
